--- a/src/Typewriter.css
+++ b/src/Typewriter.css
@@ -1,17 +1,27 @@
+/* src/Typewriter.css */
+
 .typewriter-text {
-    display: inline;
+    display: inline-block;
     overflow: hidden;
     white-space: nowrap;
     border-right: .15em solid #F0EAD6;
-    animation: typing 4s steps(40, end), blink-caret .75s step-end infinite;
+    animation: typing 8s steps(40, end), blink-caret .75s step-end infinite;
   }
   
-  @keyframes typing {
-    from { width: 0; }
-    to { width: 100%; }
-  }
-  
+  /* Cursor Blink Animation */
   @keyframes blink-caret {
     from, to { border-color: transparent; }
     50% { border-color: #F0EAD6; }
   }
+  
+  /* Responsive Design: Zwei Zeilen für kleinere Bildschirme */
+  @media (max-width: 768px) {
+    .typewriter-text {
+      display: block; /* Erzwingt, dass der Text auf zwei Zeilen angezeigt wird */
+    }
+  
+    .constant-text {
+      display: block; /* "Jesus" auf einer separaten Zeile */
+    }
+  }
+  
