--- a/src/App.css
+++ b/src/App.css
@@ -208,7 +208,6 @@ body {
   z-index: 1000;
   cursor: pointer;
 }
-
 /* Menu Overlay */
 .menu-overlay {
   position: fixed;
@@ -216,7 +215,7 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.9);
+  background-color: #001F3F;
   opacity: 0;
   visibility: hidden;
   transition: opacity 0.5s ease, visibility 0.5s ease;
@@ -242,8 +241,9 @@ body {
 }
 
 .menu-content ul li a {
-  font-size: 2rem;
-  color: #fff;
+  font-size: 5rem;
+  font-weight: bold;
+  color: #F0EAD6;
   text-decoration: none;
   transition: color 0.3s ease;
 }
